[package]
name = "img_test"
version = "0.1.0"
edition = "2021"
authors = ["José Antonio Jiménez Miramontes"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.1"
solana-program = "1.9.5"
arrayref = "0.3.6"
thiserror = "1.0.24"

[dev-dependencies]
solana-program-test = "1.9.5"
solana-sdk = "1.9.5"

[lib]
crate-type = ["cdylib", "lib"]
